--- a/RedBlue/Base.lproj/Main.storyboard
+++ b/RedBlue/Base.lproj/Main.storyboard
@@ -1,25 +1,81 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RedBlue" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="CU8-5b-9fT">
+                                <rect key="frame" x="0.0" y="0.0" width="617" height="691"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Shield-Logo_blue" translatesAutoresizingMaskIntoConstraints="NO" id="ULH-la-mML">
+                                <rect key="frame" x="14" y="80" width="172" height="159"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Shield-Logo_red" translatesAutoresizingMaskIntoConstraints="NO" id="6d8-gy-9e0">
+                                <rect key="frame" x="165" y="80" width="171" height="159"/>
+                                <animations/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xqz-or-0jS" userLabel="HideBlue">
+                                <rect key="frame" x="57" y="339" width="86" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Hide Blue"/>
+                                <connections>
+                                    <action selector="HideTheBlue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="29N-74-h2F"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4l9-6q-88c" userLabel="HideRed">
+                                <rect key="frame" x="201" y="339" width="99" height="31"/>
+                                <animations/>
+                                <state key="normal" title="Hide Red">
+                                    <color key="titleColor" red="1" green="0.041046944598614132" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="HideTheRed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jk6-RO-hUI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rq1-IU-OP9">
+                                <rect key="frame" x="164" y="470" width="46" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Reset"/>
+                                <connections>
+                                    <action selector="resetdefalt:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fzp-kN-IGd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="hideBlue" destination="xqz-or-0jS" id="vwP-zU-N3K"/>
+                        <outlet property="hideRed" destination="4l9-6q-88c" id="EPW-Fq-HtZ"/>
+                        <outlet property="logoBlue" destination="ULH-la-mML" id="Yiu-Wr-GSA"/>
+                        <outlet property="logoRed" destination="6d8-gy-9e0" id="Igu-XP-MLD"/>
+                        <outlet property="resetButt" destination="Rq1-IU-OP9" id="WDt-No-URx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="304.5" y="388.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Shield-Logo_blue" width="1280" height="1024"/>
+        <image name="Shield-Logo_red" width="1280" height="1024"/>
+        <image name="bg" width="1280" height="1024"/>
+    </resources>
 </document>
